force-app/main/default/objects/SDR_Metrics__c/SDR_Metrics__c.object-meta.xml
<CustomObject>
    <label>SDR Metric</label>
    <nameField>
        <label>SDR Metrics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SDR Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>