force-app/main/default/objects/SDR_Metrics__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SDR Metrics</relationshipLabel>
    <relationshipName>SDR_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>