force-app/main/default/objects/SDR_Metrics__c/fields/Custom_Country__c.field-meta.xml
<CustomField>
    <fullName>Custom_Country__c</fullName>
    <formula>Contact__r.MailingCountry  +  Lead_1__r.Country</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Country</label>
    <type>Text</type>
</CustomField>