force-app/main/default/objects/SDR_Metrics__c/fields/DC_Demo__c.field-meta.xml
<CustomField>
    <fullName>DC_Demo__c</fullName>
    <label>DC &amp; Demo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>DC Completed</fullName>
            </value>
            <value>
                <fullName>DC Completed Date (Vault)</fullName>
            </value>
            <value>
                <fullName>DC Scheduled</fullName>
            </value>
            <value>
                <fullName>DC Scheduled (Vault)</fullName>
            </value>
            <value>
                <fullName>DC Scheduled For</fullName>
            </value>
            <value>
                <fullName>DC Scheduled For (Vault)</fullName>
            </value>
            <value>
                <fullName>Demo Performed</fullName>
            </value>
            <value>
                <fullName>Demo_Performed(Vault)</fullName>
                <label>Demo Performed(Vault)</label>
            </value>
            <value>
                <fullName>Demo Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>