force-app/main/default/objects/SDR_Metrics__c/fields/DC_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>DC_Scheduled_Date__c</fullName>
    <label>DC Scheduled Date</label>
    <type>Date</type>
</CustomField>