force-app/main/default/objects/SDR_Metrics__c/fields/Demo_Performed_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Performed_Date__c</fullName>
    <label>Demo Performed Date</label>
    <type>Date</type>
</CustomField>