force-app/main/default/objects/SDR_Metrics__c/fields/Demo_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Scheduled_Date__c</fullName>
    <label>Demo Scheduled Date</label>
    <type>Date</type>
</CustomField>