force-app/main/default/objects/SDR_Metrics__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>IF( ISBLANK(Contact__c),IF( ISBLANK(Lead_1__c),&apos;0&apos;, Lead_1__r.Email ), Contact__r.LastModifiedBy.Email )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>