force-app/main/default/objects/SDR_Metrics__c/fields/Geo__c.field-meta.xml
<CustomField>
    <fullName>Geo__c</fullName>
    <formula>IF( Custom_Country__c  = &apos;United States&apos;, &apos;North America&apos;,IF(Custom_Country__c  = &apos;Canada&apos;, &apos;North America&apos;,IF(Custom_Country__c  = &apos;Australia&apos;, &apos;APAC&apos; ,&apos;EMEA&apos;) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geo</label>
    <type>Text</type>
</CustomField>