force-app/main/default/objects/SDR_Metrics__c/fields/Lead_1__c.field-meta.xml
<CustomField>
    <fullName>Lead_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead 1</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>SDR Metrics</relationshipLabel>
    <relationshipName>SDR_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>