force-app/main/default/objects/SDR_Metrics__c/fields/Lead_Contact__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contact__c</fullName>
    <formula>IF( ISBLANK(Contact__c) ,IF( ISBLANK( Lead_1__c ),&apos;0&apos;, Lead_1__r.Full_Name__c ) , Contact__r.FirstName +&apos; &apos;+ Contact__r.LastName  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead/Contact</label>
    <type>Text</type>
</CustomField>