force-app/main/default/objects/SDR_Metrics__c/fields/Lead_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Lead_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>SDR Metrics (Lead)</relationshipLabel>
    <relationshipName>SDR_Metrics1</relationshipName>
    <type>Lookup</type>
</CustomField>