force-app/main/default/objects/SDR_Metrics__c/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <formula>TEXT( Lead_1__r.Status )</formula>
    <label>Lead Status</label>
    <type>Text</type>
</CustomField>