force-app/main/default/objects/SDR_Metrics__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>IF( ISBLANK(Contact__c),IF( ISBLANK(Lead_1__c),&apos;0&apos;, Lead_1__r.Phone ),Contact__r.Phone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>