force-app/main/default/objects/SDR_Metrics__c/fields/SDR__c.field-meta.xml
<CustomField>
    <fullName>SDR__c</fullName>
    <formula>if(isBlank(Contact__c),if(isBlank(Lead_1__c),Null, Lead_1__r.SDR__c ),IF ( INCLUDES ( Contact__r.SDR__c  , &quot;Arvind&quot; ), &quot;Arvind Tripathy&quot;,IF ( INCLUDES ( Contact__r.SDR__c  , &quot;Nick Garcia&quot; ), &quot;Nick Garcia&quot;,IF ( INCLUDES ( Contact__r.SDR__c  , &quot;Sherdah Moca&quot; ), &quot;Sherdah Moca&quot;,IF ( INCLUDES ( Contact__r.SDR__c  , &quot;Shiva Kumar Gatla&quot; ), &quot;Shiva Kumar Gatla&quot;,IF ( INCLUDES ( Contact__r.SDR__c  , &quot;Venkatesh T&quot; ), &quot;Venkatesh Thadanola&quot;,IF ( INCLUDES ( Contact__r.SDR__c  , &quot;Christina Blanco&quot; ), &quot;Christina Blanco&quot;,IF ( INCLUDES ( Contact__r.SDR__c  , &quot;Krishna Chaitanya&quot; ), &quot;Krishna Chaitanya&quot;,IF ( INCLUDES ( Contact__r.SDR__c  , &quot;KC&quot; ),&quot;Krishna Chaitanya&quot;,IF ( INCLUDES ( Contact__r.SDR__c  , &quot;Belinda&quot; ),&quot;Belinda&quot;,IF ( INCLUDES ( Contact__r.SDR__c  , &quot;Kainaz&quot; ),&quot;Kainaz&quot;,IF ( INCLUDES ( Contact__r.SDR__c  , &quot;Amrit&quot; ),&quot;Amrita&quot;,IF ( INCLUDES ( Contact__r.SDR__c  , &quot;Matt&quot; ),&quot;Matt&quot;,IF ( INCLUDES ( Contact__r.SDR__c  , &quot;Mukesh&quot; ),&quot;Mukesh&quot;,NULL))))))))))))))</formula>
    <label>SDR</label>
    <type>Text</type>
</CustomField>