force-app/main/default/objects/SDR_Metrics__c/fields/SDR_Name__c.field-meta.xml
<CustomField>
    <fullName>SDR_Name__c</fullName>
    <label>SDR_Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>