force-app/main/default/objects/SDR_Metrics__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>IF( ISBLANK(Contact__c),IF( ISBLANK(Lead_1__c),&apos;0&apos;,&apos;Lead&apos;),&apos;Contact&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>