force-app/main/default/objects/SDR_Metrics__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead_Contact__c</columns>
    <columns>Type__c</columns>
    <columns>DC_Demo__c</columns>
    <columns>Date__c</columns>
    <columns>Phone__c</columns>
    <columns>Geo__c</columns>
    <columns>Email__c</columns>
    <columns>SDR_Name__c</columns>
    <columns>Custom_Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>